<resources>
    <string name="app_name">Tlotlo Tau</string>
    <string name="company_name">LESKARATSHEPO</string>
    <string name="bank_details_format">Bank: %1$s\nAcc#: %2$s\nBranch: %3$s</string>
    <string name="total_amount_format">Total: R%1$s</string>
    <string name="item_price_format">R%.2f</string>
    <string name="bill_to_not_available">Bill To: N/A</string>
    <string name="home">Home</string>
    <string name="invoices">Invoices</string>
    <string name="settings">Settings</string>"
    <string name="products">Products</string>
    <string name="invoice_id">Invoice ID: %1$d</string>
    <string name="amount">Amount: R%1$s</string>
    <string name="date">Date: %1$s</string>
    <string name="currency_format">R%.2fs</string>
    <string name="cancel">Cancel</string>
    <string name="proceed">Proceed</string>
    <string name="you_are_about_to_preview_the_invoice_once_generated_it_cannot_be_edited_are_you_sure_you_want_to_proceed">You are about to preview the invoice. Once generated, it cannot be edited. Are you sure you want to proceed?</string>
    <string name="warning_icon">Warning Icon</string>
    <string name="estimates">Estimates</string>
    <string name="search_invoices">Search Invoices</string>
    <string name="search_estimates">Search Estimates</string>
    <string name="company_logo">Company Logo</string>
    <string name="lesekaratshepo_invoices">LESEKARATSHEPO INVOICES</string>
    <string name="back">Back</string>
    <string name="document_detail">document_detail</string>
    <string name="file_label">File:</string>
    <string name="customer_label">Customer:</string>
    <string name="total_amount_label">Total Amount:</string>
    <string name="share">Share</string>
    <string name="edit">Edit</string>
    <string name="action">Action</string>
    <string name="title_store_name" translatable="false">Builderstown Hyper Midrand</string>
    <string name="manage_products">Manage Products</string>
    <string name="manage_documents">Manage Documents</string>
    <string name="sell_product">Sell Product</string>
    <string name="company_profile">Company profile icon</string>
    <string name="person_profile">Person Profile</string>
    <string name="img_main">Image_Main</string>
    <string name="mastercard">Mastercard</string>
    <string name="payment">Visa_Payment</string>
    <string name="profile_picture">profile</string>
    <string-array name="employee_role">
        <item>Sales</item>
        <item>Stock Control</item>
        <item>Supervisor</item>
    </string-array>

</resources>
